--- a/react-src-blog/app/style/base.less
+++ b/react-src-blog/app/style/base.less
@@ -1,8 +1,8 @@
 /*
- * @Author: duxianwei 
- * @Date: 2017-08-14 17:11:48 
- * @Last Modified by: duxianwei
- * @Last Modified time: 2017-08-14 17:24:07
+ * @Author: laichengliang
+ * @Date: 2018-08-14 17:11:48
+ * @Last Modified by: laichengliang
+ * @Last Modified time: 2018-08-14 17:24:07
  */
 
 @import "./theme.less";
@@ -35,7 +35,7 @@ body {
 .effect #aside-container,
 .effect .navbar-brand,
 .effect .navbar-content,
-.effect .navbar-header:before, 
+.effect .navbar-header:before,
 .mainnav-container,
 .ant-menu-dark.ant-menu-inline,
 .left-contant,
@@ -76,7 +76,7 @@ body {
     &:after{ display: none;}
     .anticon{ font-size: 10px; width: 10px; height: 10px; margin:-4px 16px 0 0; transition: transform .3s ease;}
   }
-  .ant-menu-sub{ 
+  .ant-menu-sub{
     .anticon{ font-size: @font-size-lg; margin:0 @space-big 0 0; color: #fff;}
   }
   .ant-menu-submenu-open.ant-menu-submenu-inline .ant-menu-submenu-title .anticon{ transform: rotate(180deg) scale(1); }
